--- a/FeelFlowAnalysis/Components/Pages/Authorization/LogIn.razor
+++ b/FeelFlowAnalysis/Components/Pages/Authorization/LogIn.razor
@@ -86,8 +86,7 @@
         };
 
         var identity = new ClaimsIdentity(claims, CookieAuthenticationDefaults.AuthenticationScheme);
-        var principal = new ClaimsPrincipal(identity);
-        await _HttpContext!.SignInAsync(principal);
+        await _HttpContext!.SignInAsync(new ClaimsPrincipal(identity));
         navigationManager.NavigateTo("/");
     }
 }
