--- a/FeelFlowAnalysis/Components/Pages/Main/Home.razor
+++ b/FeelFlowAnalysis/Components/Pages/Main/Home.razor
@@ -6,8 +6,31 @@
 
 <PageTitle>Home</PageTitle>
 <div class="home-container">
-    <p class="text-handler">Upload your photo or video...</p>
+    @if(!loading)
+    {
+        <p class="text-handler">Upload your photo or video...</p>
+    }   
     <div class="upload-button-container">
+
+        @if(loading)
+        {
+            <div class="cube">
+                <div class="side"></div>
+                <div class="side"></div>
+                <div class="side"></div>
+                <div class="side"></div>
+                <div class="side"></div>
+                <div class="side"></div>
+            </div>
+        }
+        else
+        {
+            <button class="button upload-button" style="position: relative;">
+                Upload
+                <InputFile OnChange="LoadFile" accept="image/*" class="input-file" />
+            </button>
+        }
+
         @if (imageBytes is not null)
         {
             // Add img and css
@@ -16,28 +39,29 @@
         {
             <p>@data</p>
         }
-        <button class="button upload-button" style="position: relative;">
-            Upload
-            <InputFile OnChange="LoadFile" accept="image/*" class="input-file" />
-        </button>
+        
     </div>
 </div>
 
 @code {
     private byte[]? imageBytes;
+    private bool loading = false;
     private string? imageSource;
     private string? data;
     private async Task LoadFile(InputFileChangeEventArgs e)
     {
+        loading = true;
         var file = e.File;
 
         if(file is null)
         {
+            loading = false;
             return;
         }
 
         if (!file.ContentType.StartsWith("image"))
         {
+            loading = false;
             return;
         }
 
@@ -60,12 +84,17 @@
             {
                 var response = await client.PostAsync(apiSettings.ApiUrl + apiSettings.Analyze, content);
                 if (!response.IsSuccessStatusCode)
-                    return;
-
+                {
+                    loading = false;
+                    return; 
+                }
+                    
                 data = await response.Content.ReadAsStringAsync();
+                loading = false;
             }
             catch
             {
+                loading = false;
                 return;
             }
         }
