--- a/FeelFlowAnalysis/wwwroot/Styles/signup.css
+++ b/FeelFlowAnalysis/wwwroot/Styles/signup.css
@@ -1,7 +1,3 @@
-body {
-    background-color: #1e1e1e;
-}
-
 .brand-container {
     display: inline-flex;
 }
@@ -11,8 +7,11 @@ body {
 }
 
 .form-container {
-    background-color: #1e1e1e;
-    padding: 25%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 200px;
+    margin-right: 200px;
+    padding: 250px;
 }
 
 .card-container {
