--- a/FeelFlowAnalysis/Components/Layout/NavMenu.razor
+++ b/FeelFlowAnalysis/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
   <div class="container-fluid">
-    <div class="logo-layout">
+      <NavLink href="">
       <svg
         width="100"
         height="100"
@@ -18,7 +18,7 @@
           fill="#E6AA30"
         />
       </svg>
-    </div>
+      </NavLink>
   </div>
 </div>
 
@@ -39,6 +39,7 @@
     <div class="nav-item px-3">
       <NavLink class="nav-link" href="verify">
         <svg
+          class="bi"
           width="23"
           height="25"
           viewBox="0 0 44 44"
@@ -74,13 +75,14 @@
             fill="white"
           />
         </svg>
-        <div class="nav-menu-title">Face verifying</div>
+        Face verifying
       </NavLink>
     </div>
 
     <div class="nav-item px-3">
       <NavLink class="nav-link" href="metadata">
         <svg
+          class="bi"
           width="20"
           height="25"
           viewBox="0 0 35 44"
@@ -140,7 +142,7 @@
             fill="white"
           />
         </svg>
-        <div class="nav-menu-title">Metadata</div>
+        Metadata
       </NavLink>
     </div>
 
