--- a/FeelFlowAnalysis/wwwroot/Styles/signup.css
+++ b/FeelFlowAnalysis/wwwroot/Styles/signup.css
@@ -3,22 +3,37 @@ body {
 }
 
 .brand-container {
-    display: inline-flex;
+    display: flex;
+    
+    align-items: flex-end;
+
 }
 
 .brand-name {
     color: #e6aa30;
+    margin-left: 20px;
+}
+
+.signup-container {
+    background-color: #1e1e1e;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* margin: auto; */
 }
 
 .form-container {
-    background-color: #1e1e1e;
-    padding: 25%;
+    
+
 }
 
 .card-container {
     background-color: #2f2f2f;
     border-radius: 10px;
     padding: 20px;
+    margin-top: 20px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
