--- a/FeelFlowAnalysis/Components/Pages/Main/Metadata.razor
+++ b/FeelFlowAnalysis/Components/Pages/Main/Metadata.razor
@@ -4,19 +4,23 @@
 @rendermode InteractiveServer
 
 <PageTitle>Metadata</PageTitle>
-
-@if (imageBytes is not null)
-{
-    // Add img and css
-}
-@if (data is not null)
-{
-    <p>@data</p>
-}
-<button class="button upload-button">
-    Upload
-    <InputFile OnChange="LoadFile" accept="image/*" style="display: none;" />
-</button>
+<div class="home-container">
+    <p class="text-handler">Upload your photo or video...</p>
+    <div class="upload-button-container">
+        @if (imageBytes is not null)
+        {
+            // Add img and css
+        }
+        @if (data is not null)
+        {
+            <p>@data</p>
+        }
+        <button class="button upload-button" style="position: relative;">
+            Upload
+            <InputFile OnChange="LoadFile" accept="image/*" class="input-file" />
+        </button>
+    </div>
+</div>
 
 @code {
     private byte[]? imageBytes;
@@ -43,10 +47,6 @@
             imageSource = $"data:{file.ContentType};base64,{Convert.ToBase64String(imageBytes)}";
         }
 
-        var values = new Dictionary<string, bool>
-        {
-            {"age", true}, {"emotion", true}, {"gender", true}, {"race", true}
-        };
         var jsonContent = JsonSerializer.Serialize(new MetadataViewModel { B64img = imageSource } );
         var content = new StringContent(jsonContent, Encoding.UTF8, "application/json");
         using (var client = new HttpClient())
@@ -65,4 +65,4 @@
             }
         }
     }
-}
+}   
