--- a/FeelFlowAnalysis/Components/Pages/Main/Verify.razor
+++ b/FeelFlowAnalysis/Components/Pages/Main/Verify.razor
@@ -1,15 +1,36 @@
 @page "/verify"
 @layout Layout.MainLayout
+@using FeelFlowAnalysis.Models.ViewModels
 @rendermode InteractiveServer
 
 <PageTitle>Verify</PageTitle>
-
-<h1>Face verifying</h1>
+<div class="home-container">
+    <p class="text-handler">Upload your photo's</p>
+    <div class="upload-button-container">
+        @if (imageBytes1 is not null && imageBytes2 is not null)
+        {
+            // Add img and css
+        }
+        @if (data is not null)
+        {
+            <p>@data</p>
+        }
+        <button class="button upload-button" style="position: relative;">
+            Upload
+            <InputFile OnChange="LoadFile" accept="image/*" class="input-file" />
+        </button>
+    </div>
+</div>
 
 @code {
-    @* private byte[]? imageBytes;
-    private string? imageSource;
-    private async Task OnInputFileChange(InputFileChangeEventArgs e)
+    private byte[]? imageBytes1;
+    private byte[]? imageBytes2;
+    private string? imageSource1;
+    private string? imageSource2;
+    private string? data;
+    private string rModelName = string.Empty;
+    private string distanceMetric = string.Empty;
+    private async Task LoadFile(InputFileChangeEventArgs e)
     {
         var file = e.File;
 
@@ -26,17 +47,28 @@
         using (var memoryStream = new MemoryStream())
         {
             await file.OpenReadStream().CopyToAsync(memoryStream);
-            imageBytes = memoryStream.ToArray();
-            imageSource = $"data:{file.ContentType};base64,{Convert.ToBase64String(imageBytes)}";
+            imageBytes1 = memoryStream.ToArray();
+            imageBytes2 = memoryStream.ToArray();
+            imageSource1 = $"data:{file.ContentType};base64,{Convert.ToBase64String(imageBytes1)}";
+            imageSource2 = $"data:{file.ContentType};base64,{Convert.ToBase64String(imageBytes2)}";
         }
 
-        var jsonContent = JsonSerializer.Serialize(new Models.API.Metadata.MetadataModel { B64img = imageSource } );
+        var jsonContent = JsonSerializer.Serialize(new VerifyViewModel { B64img1 = imageSource1, B64img2 = imageSource2, RModelName = rModelName, DistanceMetric = distanceMetric} );
         var content = new StringContent(jsonContent, Encoding.UTF8, "application/json");
-
         using (var client = new HttpClient())
         {
-            var response = await client.PostAsync("http://127.0.0.1:8000/analyze", content);
-        }
+            try
+            {
+                var response = await client.PostAsync(apiSettings.ApiUrl + apiSettings.Analyze, content);
+                if (!response.IsSuccessStatusCode)
+                    return;
 
-    } *@
-}
+                data = await response.Content.ReadAsStringAsync();
+            }
+            catch
+            {
+                return;
+            }
+        }
+    }
+}   
