Add card with plans

--- a/FeelFlowAnalysis/Components/App.razor
+++ b/FeelFlowAnalysis/Components/App.razor
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
+    <link rel="stylesheet" href="Styles/BuyPremium.css">
     <link rel="stylesheet" href="Styles/login.css">
     <link rel="stylesheet" href="Styles/signup.css">
     <link rel="stylesheet" href="Styles/home.css" />
@@ -19,8 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap"
       rel="stylesheet"
     />
-    <script src="/Scripts/LogIn.js"></script>
-    <script src="/Scripts/SingUp.js"></script>
+    <script src="/Scripts/PremiumCards.Js"></script>
     <HeadOutlet />
   </head>
 
