--- a/FeelFlowAnalysis/Components/Layout/NavMenu.razor
+++ b/FeelFlowAnalysis/Components/Layout/NavMenu.razor
@@ -179,3 +179,7 @@
     </div>
   </nav>
 </div>
+
+<div class="premium-button-container">
+  <NavLink href="Premium"><button class="premium-button" >Buy Premium</button></NavLink>
+</div>
