--- a/FeelFlowAnalysis/Components/Layout/NavMenu.razor.css
+++ b/FeelFlowAnalysis/Components/Layout/NavMenu.razor.css
@@ -8,8 +8,7 @@
     top: 0.5rem;
     right: 1rem;
     border: 1px solid rgba(255, 255, 255, 0.1);
-    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
-        no-repeat center/1.75rem rgba(255, 255, 255, 0.1);
+    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") no-repeat center/1.75rem rgba(255, 255, 255, 0.1);
 }
 
 .logo-layout {
@@ -85,7 +84,7 @@
     display: none;
 }
 
-.navbar-toggler:checked ~ .nav-scrollable {
+.navbar-toggler:checked~.nav-scrollable {
     display: block;
 }
 
@@ -102,4 +101,38 @@
         display: block;
         overflow-y: auto;
     }
+}
+
+.premium-button {
+    padding: 17px 40px;
+    border-radius: 50px;
+    cursor: pointer;
+    border: 0;
+    background-color: white;
+    box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
+    font-size: 15px;
+    transition: all 0.5s ease;
+}
+
+.premium-button:hover {
+    letter-spacing: 3px;
+    background-color: hsl(40, 78%, 55%);
+    color: hsl(0, 0%, 100%);
+    box-shadow: rgb(230, 170, 48) 0px 7px 29px 0px;
+}
+
+.premium-button:active {
+    letter-spacing: 3px;
+    background-color: hsl(40, 78%, 55%);
+    color: hsl(0, 0%, 100%);
+    box-shadow: rgb(230, 170, 48) 0px 0px 0px 0px;
+    transform: translateY(10px);
+    transition: 100ms;
+}
+
+.premium-button-container {
+    padding-top: 145%;
+    padding-left: 10%;
 }
