--- a/FeelFlowAnalysis/wwwroot/Styles/home.css
+++ b/FeelFlowAnalysis/wwwroot/Styles/home.css
@@ -37,78 +37,114 @@
     display: none;
 }
 
-.cube {
-    margin: auto;
-    font-size: 24px;
-    height: 1em;
-    width: 1em;
-    position: relative;
-    transform: rotatex(30deg) rotatey(45deg);
-    transform-style: preserve-3d;
-    animation: cube-spin 1.5s infinite ease-in-out alternate;
+.spinner-wrapper {
+  position: fixed;
+  z-index: 999999;
+ }
+ 
+ .sk-folding-cube {
+  position: absolute;
+  top: 48%;
+  left: 48%;
+  width: 40px;
+  height: 40px;
+  -webkit-transform: rotateZ(45deg);
+  transform: rotateZ(45deg);
+ }
+ 
+ .sk-folding-cube .sk-cube {
+  float: left;
+  width: 50%;
+  height: 50%;
+  position: relative;
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+ }
+ 
+ .sk-folding-cube .sk-cube:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: orange;
+  -webkit-animation: sk-foldCubeAngle 2.4s infinite linear both;
+  animation: sk-foldCubeAngle 2.4s infinite linear both;
+  -webkit-transform-origin: 100% 100%;
+  -ms-transform-origin: 100% 100%;
+  transform-origin: 100% 100%;
+ }
+ 
+ .sk-folding-cube .sk-cube2 {
+  -webkit-transform: scale(1.1) rotateZ(90deg);
+  transform: scale(1.1) rotateZ(90deg);
+ }
+ 
+ .sk-folding-cube .sk-cube3 {
+  -webkit-transform: scale(1.1) rotateZ(180deg);
+  transform: scale(1.1) rotateZ(180deg);
+ }
+ 
+ .sk-folding-cube .sk-cube4 {
+  -webkit-transform: scale(1.1) rotateZ(270deg);
+  transform: scale(1.1) rotateZ(270deg);
+ }
+ 
+ .sk-folding-cube .sk-cube2:before {
+  -webkit-animation-delay: 0.3s;
+  animation-delay: 0.3s;
+ }
+ 
+ .sk-folding-cube .sk-cube3:before {
+  -webkit-animation-delay: 0.6s;
+  animation-delay: 0.6s;
+ }
+ 
+ .sk-folding-cube .sk-cube4:before {
+  -webkit-animation-delay: 0.9s;
+  animation-delay: 0.9s;
+ }
+ 
+ @-webkit-keyframes sk-foldCubeAngle {
+  0%,
+  10% {
+   -webkit-transform: perspective(140px) rotateX(-180deg);
+   transform: perspective(140px) rotateX(-180deg);
+   opacity: 0;
   }
-  
-  .side {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    transform-style: preserve-3d;
+  25%,
+  75% {
+   -webkit-transform: perspective(140px) rotateX(0deg);
+   transform: perspective(140px) rotateX(0deg);
+   opacity: 1;
   }
-  .side::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: #e6aa30;
-    transform: translatez(0.5em);
-    animation: cube-explode 1.5s infinite ease-in-out;
-    opacity: 0.5;
+  90%,
+  100% {
+   -webkit-transform: perspective(140px) rotateY(180deg);
+   transform: perspective(140px) rotateY(180deg);
+   opacity: 0;
   }
-  
-  .side:nth-child(1) {
-    transform: rotatey(90deg);
+ }
+ 
+ @keyframes sk-foldCubeAngle {
+  0%,
+  10% {
+   -webkit-transform: perspective(140px) rotateX(-180deg);
+   transform: perspective(140px) rotateX(-180deg);
+   opacity: 0;
   }
-  
-  .side:nth-child(2) {
-    transform: rotatey(180deg);
+  25%,
+  75% {
+   -webkit-transform: perspective(140px) rotateX(0deg);
+   transform: perspective(140px) rotateX(0deg);
+   opacity: 1;
   }
-  
-  .side:nth-child(3) {
-    transform: rotatey(270deg);
+  90%,
+  100% {
+   -webkit-transform: perspective(140px) rotateY(180deg);
+   transform: perspective(140px) rotateY(180deg);
+   opacity: 0;
   }
-  
-  .side:nth-child(4) {
-    transform: rotatey(360deg);
-  }
-  
-  .side:nth-child(5) {
-    transform: rotatex(90deg);
-  }
-  
-  .side:nth-child(6) {
-    transform: rotatex(270deg);
-  }
-  
-  @keyframes cube-spin {
-    0% {
-      transform: rotatex(30deg) rotatey(45deg);
-    }
-    100% {
-      transform: rotatex(30deg) rotatey(405deg);
-    }
-  }
-  @keyframes cube-explode {
-    0% {
-      transform: translatez(0.5em);
-    }
-    50% {
-      transform: translatez(0.75em);
-    }
-    100% {
-      transform: translatez(0.5em);
-    }
-  }
+ }
