--- a/FeelFlowAnalysis/wwwroot/Styles/signup.css
+++ b/FeelFlowAnalysis/wwwroot/Styles/signup.css
@@ -11,7 +11,7 @@
     flex-direction: column;
     margin-left: 200px;
     margin-right: 200px;
-    padding: 250px;
+    padding-top: 130px;
 }
 
 .card-container {
