--- a/FeelFlowAnalysis/Components/Layout/MainLayout.razor.css
+++ b/FeelFlowAnalysis/Components/Layout/MainLayout.razor.css
@@ -122,7 +122,7 @@ main {
         5px 0px 20px 0px rgba(0, 0, 0, 0.19);
     height: 6.65rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     margin-left: 0.7px;
 }
