--- a/FeelFlowAnalysis/Components/Layout/NavMenu.razor
+++ b/FeelFlowAnalysis/Components/Layout/NavMenu.razor
@@ -181,5 +181,5 @@
 </div>
 
 <div class="premium-button-container">
-  <NavLink href="Premium"><button class="premium-button" >Buy Premium</button></NavLink>
+  <NavLink href="premium"><button class="premium-button">Buy Premium</button></NavLink>
 </div>
