--- a/FeelFlowAnalysis/Components/Pages/Authorization/LogIn.razor
+++ b/FeelFlowAnalysis/Components/Pages/Authorization/LogIn.razor
@@ -50,6 +50,7 @@
         </div>
     </EditForm>
     </div>
+    <p style="color: #D9D9D9;">Don't have any account? <NavLink href="signup">Create one!</NavLink></p>
 </div>
 
 @code {
