--- a/FeelFlowAnalysis/Components/Pages/Authorization/SignUp.razor
+++ b/FeelFlowAnalysis/Components/Pages/Authorization/SignUp.razor
@@ -54,8 +54,8 @@
                 </div>
             </EditForm>
         </div>
+        <p style="color: #D9D9D9;">Already have account? <NavLink href="login">Login now!</NavLink></p>
     </div>
-    
 </div>
 @code {
     private string _errorMessage = string.Empty;
