--- a/FeelFlowAnalysis/Components/Pages/Authorization/LogIn.razor
+++ b/FeelFlowAnalysis/Components/Pages/Authorization/LogIn.razor
@@ -10,45 +10,40 @@
 
 <PageTitle>Login</PageTitle>
 
-<div class="form-container">
-    <div class="brand-container">
-        <svg
-        width="100"
-        height="100"
-        viewBox="0 0 120 120"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <circle cx="60" cy="60" r="60" fill="#D9D9D9" opacity="0.7" />
-        <path
-          d="M30.25 33.1C31 39.2 28.35 56.8 35.2 60.15C39.6 62.3 53.25 53.85 55.6 50.15C66.6 32.8 30.25 26.65 30.25 33.1Z"
-          fill="black"
-        />
-        <path
-          d="M54.75 62.8C43.95 73 42.95 76.2 56.25 85C68.35 93 79.75 89.8 86.55 75.9C91.45 65.95 82.75 58.6 74.8 53.4C66.55 48 61.1 56.75 54.75 62.8Z"
-          fill="#E6AA30"
-        />
-      </svg>
-        <h1 class="brand-name">FeelFlow Analysis</h1>
-    </div>
-    
-    <div class="card-container">
-    <EditForm Model="@_Model" OnValidSubmit="Authenticate" FormName="LogInForm">
-        <DataAnnotationsValidator />
-        <div>
-            <label class="form-label">Email</label>
-            <InputText @bind-Value="_Model.Email" placeholder="Email" type="email" class="form-input" />
-            <ValidationMessage For="() => _Model.Email" />
+<div class="login-container">
+    <div class="form-container">
+        <div class="brand-container">
+            <svg width="100" height="100" viewBox="0 0 120 120" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="60" cy="60" r="60" fill="#D9D9D9" opacity="0.7" />
+                <path
+                    d="M30.25 33.1C31 39.2 28.35 56.8 35.2 60.15C39.6 62.3 53.25 53.85 55.6 50.15C66.6 32.8 30.25 26.65 30.25 33.1Z"
+                    fill="black" />
+                <path
+                    d="M54.75 62.8C43.95 73 42.95 76.2 56.25 85C68.35 93 79.75 89.8 86.55 75.9C91.45 65.95 82.75 58.6 74.8 53.4C66.55 48 61.1 56.75 54.75 62.8Z"
+                    fill="#E6AA30" />
+            </svg>
+            <h1 class="brand-name">FeelFlow Analysis</h1>
         </div>
-        <div>
-            <label class="form-label">Password</label>
-            <InputText @bind-Value="_Model.Password" placeholder="Password" type="password" class="form-input"/>
-            <ValidationMessage For="() => _Model.Password" />
+
+        <div class="card-container">
+            <EditForm Model="@_Model" OnValidSubmit="Authenticate" FormName="LogInForm">
+                <DataAnnotationsValidator />
+                <div>
+                    <label class="form-label">Email</label>
+                    <InputText @bind-Value="_Model.Email" placeholder="Email" type="email" class="form-input" />
+                    <ValidationMessage For="() => _Model.Email" />
+                </div>
+                <div>
+                    <label class="form-label">Password</label>
+                    <InputText @bind-Value="_Model.Password" placeholder="Password" type="password"
+                        class="form-input" />
+                    <ValidationMessage For="() => _Model.Password" />
+                </div>
+                <div>
+                    <button type="submit" class="submit-button">Login</button>
+                </div>
+            </EditForm>
         </div>
-        <div>
-            <button type="submit" class="submit-button">Login</button>
-        </div>
-    </EditForm>
     </div>
 </div>
 
@@ -70,8 +65,8 @@
         }
 
         var user = await userService.Authenticate(
-            encryptionService.EncryptString(_Model.Email), 
-            hashingService.HashString(_Model.Password)
+        encryptionService.EncryptString(_Model.Email),
+        hashingService.HashString(_Model.Password)
         );
         if (user is null)
         {
@@ -80,10 +75,10 @@
         }
 
         var claims = new List<Claim>
-        {
-            new Claim(ClaimTypes.Email, _Model.Email),
-            new Claim(ClaimTypes.Role, user.Role.ToString())
-        };
+{
+new Claim(ClaimTypes.Email, _Model.Email),
+new Claim(ClaimTypes.Role, user.Role.ToString())
+};
 
         var identity = new ClaimsIdentity(claims, CookieAuthenticationDefaults.AuthenticationScheme);
         await _HttpContext!.SignInAsync(new ClaimsPrincipal(identity));
