--- a/FeelFlowAnalysis/Components/Layout/NavMenu.razor
+++ b/FeelFlowAnalysis/Components/Layout/NavMenu.razor
@@ -1,26 +1,28 @@
-﻿<div class="nav-logo">
-  <div class="svg-logo-container">
-    <svg
-        width="60"
-        height="60"
-        viewBox="0 0 120 120"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-        style="border-radius: 50px;"
-      >
-        <circle cx="60" cy="60" r="60" fill="#D9D9D9" opacity="0.7" />
-        <path class="logo-up-item"
-          d="M30.25 33.1C31 39.2 28.35 56.8 35.2 60.15C39.6 62.3 53.25 53.85 55.6 50.15C66.6 32.8 30.25 26.65 30.25 33.1Z"
-          fill="black"
-        />
-        <path class="logo-down-item"
-          d="M54.75 62.8C43.95 73 42.95 76.2 56.25 85C68.35 93 79.75 89.8 86.55 75.9C91.45 65.95 82.75 58.6 74.8 53.4C66.55 48 61.1 56.75 54.75 62.8Z"
-          fill="#E6AA30"
-        />
-      </svg>
+﻿<NavLink href="" style="text-decoration: none;">
+  <div class="nav-logo">
+    <div class="svg-logo-container">
+      <svg
+          width="60"
+          height="60"
+          viewBox="0 0 120 120"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+          style="border-radius: 50px;"
+        >
+          <circle cx="60" cy="60" r="60" fill="#D9D9D9" opacity="0.7" />
+          <path class="logo-up-item"
+            d="M30.25 33.1C31 39.2 28.35 56.8 35.2 60.15C39.6 62.3 53.25 53.85 55.6 50.15C66.6 32.8 30.25 26.65 30.25 33.1Z"
+            fill="black"
+          />
+          <path class="logo-down-item"
+            d="M54.75 62.8C43.95 73 42.95 76.2 56.25 85C68.35 93 79.75 89.8 86.55 75.9C91.45 65.95 82.75 58.6 74.8 53.4C66.55 48 61.1 56.75 54.75 62.8Z"
+            fill="#E6AA30"
+          />
+        </svg>
+    </div>
+    <h1>FeelFlow Analysis</h1>
   </div>
-  <h1>FeelFlow Analysis</h1>
-</div>
+</NavLink>
 
 <div
   class="nav-scrollable"
