--- a/FeelFlowAnalysis/wwwroot/Styles/home.css
+++ b/FeelFlowAnalysis/wwwroot/Styles/home.css
@@ -6,6 +6,40 @@
     margin-top: 19%;
 }
 
+.user-card {
+    height: 350px;
+    background-color: #2f2f2f;
+    color: #e6aa30;
+    border-radius: 20px;
+    padding: 20px;
+    margin: 10px;
+    transition: transform 0.3s;
+}
+
+.user-card:hover {
+    box-shadow: 0px 0px 20px rgba(230, 170, 48, 0.5);
+    transform: scale(1.05);
+}
+
+.user-info-card{
+    background-color: #2f2f2f;
+    color: #e6aa30;
+    border-radius: 20px;
+    padding: 20px;
+    margin: 10px;
+    transition: transform 0.3s;
+}
+
+.user-info-card:hover {
+    box-shadow: 0px 0px 20px rgba(230, 170, 48, 0.5);
+    transform: scale(1.05);
+}
+
+.data-container{
+    display: flex;
+    flex-direction: column;
+}
+
 .text-handler {
     color: #ffff;
     font-size: 36px;
