Fix verify page

--- a/FeelFlowAnalysis/Components/Pages/Main/Home.razor
+++ b/FeelFlowAnalysis/Components/Pages/Main/Home.razor
@@ -10,6 +10,7 @@
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject ILogger<Home> logger
 @inject HttpClient httpClient
+@inject IOptions<Settings> Settings
 
 <PageTitle>Home</PageTitle>
 <div class="home-container">
@@ -62,15 +63,12 @@
 
 @code {
     private Dictionary<string, bool> _actions = new()
-        {
-            {"age", true}, {"emotion", true}, {"gender", true}, {"race", true}
-        };
+    { {"age", true}, {"emotion", true}, {"gender", true}, {"race", true} };
     private byte[]? _imageBytes;
     private bool _loading = false;
     private AnalyzeDTO[]? _data;
     private string? _errorMessage;
-    private const long _MAX_FILE_SIZE = 5242880;
-    private void ClearData() 
+    private void ClearData()
     {
         _data = null;
         _loading = true;
@@ -88,7 +86,7 @@
             return;
         }
 
-        if (file.Size > _MAX_FILE_SIZE)
+        if (file.Size > Settings.Value.Api.MaxFileSize)
         {
             _loading = false;
             _errorMessage = "File size > 5MB.";
@@ -97,7 +95,8 @@
         try
         {
             using var memoryStream = new MemoryStream();
-            await file.OpenReadStream(maxAllowedSize: _MAX_FILE_SIZE).CopyToAsync(memoryStream);
+            await file.OpenReadStream(maxAllowedSize: Settings.Value.Api.MaxFileSize)
+                .CopyToAsync(memoryStream);
             _imageBytes = memoryStream.ToArray();
         }
         catch (Exception ex)
@@ -107,23 +106,17 @@
             return;
         }
 
-        var jsonContent = JsonSerializer.Serialize(
-            new AnalyzeViewModel 
-            { 
-                B64img = $"data:{file.ContentType};base64,{Convert.ToBase64String(_imageBytes)}", 
-                Actions = new Dictionary<string, bool>
-                {
-                    {"age", true}, {"emotion", true}, {"gender", true}, {"race", true}
-                }
-            } 
-        );
+        var jsonContent = JsonSerializer.Serialize(new AnalyzeViewModel 
+        { 
+            B64img = $"data:{file.ContentType};base64,{Convert.ToBase64String(_imageBytes)}", 
+            Actions = _actions
+        });
         var content = new StringContent(jsonContent, Encoding.UTF8, "application/json");
 
         try
         {
-            var response = await httpClient.PostAsync(
-                Settings.Value.Api.Analyze, content
-            );
+            var response = await httpClient
+                .PostAsync(Settings.Value.Api.Analyze, content);
             response.EnsureSuccessStatusCode();
             
             var serialized_data = await response.Content.ReadAsStringAsync();
